--- a/travelcar/travelcar/Info.plist
+++ b/travelcar/travelcar/Info.plist
@@ -65,5 +65,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) aimerait accéder à votre appareil photo.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) aimerait accéder à votre galerie photo.</string>
 </dict>
 </plist>
